--- a/StudentManagement/Views/_AuthLayout.cshtml
+++ b/StudentManagement/Views/_AuthLayout.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-6 offset-md-3">
         <div class="card login-logout-tab">
-            <div calss="card-header">
+            <div calss="card-header col-md">
                 <ul class="nav nav-tabs card-header-tabs">
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
