--- a/StudentManagement/wwwroot/css/site.css
+++ b/StudentManagement/wwwroot/css/site.css
@@ -59,8 +59,8 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
   margin-bottom: 60px;
+  position: relative;
 }
 .footer {
   position: absolute;
